--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ black==23.3.0
 click==8.1.3
 colorama==0.4.6
 decorator==5.1.1
+dj-database-url==2.0.0
 Django==4.2.2
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
@@ -21,12 +22,15 @@ pickleshare==0.7.5
 platformdirs==3.8.0
 prompt-toolkit==3.0.38
 pure-eval==0.2.2
+pycodestyle==2.10.0
 Pygments==2.15.1
 PyJWT==2.7.0
+python-dotenv==1.0.0
 pytz==2023.3
 six==1.16.0
 sqlparse==0.4.4
 stack-data==0.6.2
 traitlets==5.9.0
+typing_extensions==4.7.1
 tzdata==2023.3
 wcwidth==0.2.6
