--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 asgiref==3.7.2
 asttokens==2.2.1
+attrs==23.1.0
 backcall==0.2.0
 black==23.3.0
 click==8.1.3
@@ -9,10 +10,14 @@ dj-database-url==2.0.0
 Django==4.2.2
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
+drf-spectacular==0.26.3
 executing==1.2.0
+inflection==0.5.1
 ipdb==0.13.13
 ipython==8.14.0
 jedi==0.18.2
+jsonschema==4.18.0
+jsonschema-specifications==2023.6.1
 matplotlib-inline==0.1.6
 mypy-extensions==1.0.0
 packaging==23.1
@@ -21,16 +26,22 @@ pathspec==0.11.1
 pickleshare==0.7.5
 platformdirs==3.8.0
 prompt-toolkit==3.0.38
+psycopg==3.1.9
+psycopg2==2.9.6
 pure-eval==0.2.2
 pycodestyle==2.10.0
 Pygments==2.15.1
 PyJWT==2.7.0
 python-dotenv==1.0.0
 pytz==2023.3
+PyYAML==6.0
+referencing==0.29.1
+rpds-py==0.8.8
 six==1.16.0
 sqlparse==0.4.4
 stack-data==0.6.2
 traitlets==5.9.0
 typing_extensions==4.7.1
 tzdata==2023.3
+uritemplate==4.1.1
 wcwidth==0.2.6
