--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,8 @@
-DOMAIN=
-ADMIN_EMAIL=
-ROOT_URL=
 SECRET_KEY=
-DB_PASSWORD=
-DB_USER=
-DB_NAME=
+POSTGRES_USERNAME =
+POSTGRES_PASSWORD =
+POSTGRES_DB_NAME =
+POSTGRES_DB_HOST =
+POSTGRES_DB_PORT =
+
+
