chore: add new env example

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,7 @@
 SECRET_KEY=
-POSTGRES_USERNAME =
-POSTGRES_PASSWORD =
-POSTGRES_DB_NAME =
-POSTGRES_DB_HOST =
-POSTGRES_DB_PORT =
-
-
+DB_ENGINE=django.db.backends.sqlite3 || django.db.backends.postgres
+DB_USERNAME=
+DB_PASSWORD=
+DB_NAME=
+DB_HOST=
+DB_PORT=
